--- a/src/components/homeSections/CoursesSection.module.css
+++ b/src/components/homeSections/CoursesSection.module.css
@@ -65,9 +65,23 @@
 }
 
 /* IMAGE */
+
 .imageWrap {
-  height: 200px;
+  aspect-ratio: 16 / 9;
+  width: 100%;
   overflow: hidden;
+  background: #181c22;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.imageWrap img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  aspect-ratio: 16 / 9;
+  display: block;
 }
 
 .imageWrap img {
