--- a/src/components/CourseSection/CourseSection1.module.css
+++ b/src/components/CourseSection/CourseSection1.module.css
@@ -2,7 +2,7 @@
    SECTION BASE
 ============================ */
 .section {
-  background: #05070c;
+  background: #090d15;
   padding: 120px 24px 60PX 24PX;
   border-bottom: 1px solid #b8c2e2;
   color: #ffffff;
