--- a/src/components/CourseSection/CourseSection2.module.css
+++ b/src/components/CourseSection/CourseSection2.module.css
@@ -1,6 +1,6 @@
 /* ===== BASE ===== */
 .section {
-  background: #05070c;
+  background: #090d15;
   padding: 60px 24px 60PX 24PX;
   color: #fff;
 }
